# meetily

./: AGENTS.md  CLAUDE.md  Cargo.toml  README.md
.opencode/: ACTIVE.md  NOTES.md  TODO.md
.opencode/plans/: phase-10-config-models-templates.md  phase-11-import-sse.md  phase-12-summaries-retranscription.md  phase-13-cleanup-finalize.md  phase-3-remove-local-stt.md  phase-4-cloud-first-stt.md  phase-5-config-ui.md  phase-6-testing.md  phase-7-advanced.md  phase-8-axum-skeleton.md  phase-9-meetings-transcripts.md
docs/: architecture.md
frontend/: API.md  README.md  build.bat  build.ps1  package.json
frontend/scripts/: tauri-auto.js
frontend/src-tauri/: Cargo.toml  LOGGING_OPTIMIZATIONS.md  build.rs  tauri.conf.json
frontend/src-tauri/src/: lib.rs  tray.rs
frontend/src-tauri/src/api/: api.rs
frontend/src-tauri/src/audio/: common.rs  import.rs  recording_commands.rs  retranscription.rs
frontend/src-tauri/src/audio/transcription/: engine.rs  mod.rs  worker.rs
frontend/src-tauri/src/database/repositories/: setting.rs
frontend/src/app/settings/: page.tsx
frontend/src/components/: LanguageSelection.tsx  TranscriptSettings.tsx
frontend/src/components/ImportAudio/: ImportAudioDialog.tsx
frontend/src/components/MeetingDetails/: RetranscribeDialog.tsx
frontend/src/components/Sidebar/: index.tsx
frontend/src/contexts/: ConfigContext.tsx
frontend/src/hooks/: useModalState.ts
server/: Cargo.toml
server/src/: auth.rs  error.rs  main.rs  state.rs
server/src/db/: manager.rs  models.rs
server/src/routes/: health.rs
