[package]
name = "meetily-server"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"

[dependencies]
axum = { version = "0.7", features = ["multipart", "macros"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono"] }
reqwest = { version = "0.11", features = ["multipart", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
chrono = { version = "0.4.31", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
dirs = "5.0.1"
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
futures-util = "0.3"
async-trait = "0.1"
once_cell = "1.17.1"
dashmap = "6.1.0"
regex = "1.11.0"
whatlang = "0.16.4"

[build-dependencies]
# none yet
